Circle drawing using canvas.

--- a/template/upload.html
+++ b/template/upload.html
@@ -19,7 +19,7 @@
 	  <p>Image: <input id="imageName" type="text" disabled="disabled" /></p>
 	  <p>vector x: <input id="vectorX" type="text" class="small" /></p>
 	  <p>vector y: <input id="vectorY" type="text" class="small" /></p>
-	  <p>vector radius: <input id="vectorRadius" type="text" class="small" /></p>
+	  <p>vector radius: <input id="vectorRadius" type="text" class="small" value="10" /></p>
 	  <p><input type="submit" value="SIVQ" /></p>
 	</form>
 	<div id="original"></div>
