--- a/template/upload.html
+++ b/template/upload.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="/static/style.css" />
 	<script type="text/javascript" src="/static/jquery.js"></script>
 	<script type="text/javascript" src="/static/main.js"></script>
+	<script type="text/javascript" src="/static/process.js"></script>
 </head>
 <body>
 	<h1>Spatially Invariant Vector Quantization</h1>
@@ -20,7 +21,17 @@
 	  <p>vector x: <input id="vectorX" type="text" class="small" /></p>
 	  <p>vector y: <input id="vectorY" type="text" class="small" /></p>
 	  <p>vector radius: <input id="vectorRadius" type="text" class="small" value="10" /></p>
-	  <p><input type="submit" value="SIVQ" /></p>
+	  <p>vector rings: <input id="vectorRings" type="text" class="small" value="1" /></p>
+	  <p>ring size increment: <input id="ringSizeInc" type="text" class="small" value="2" /></p>
+	  <p>threshold: <input id="threshold" type="text" class="small" value="0.0" /></p>
+	  <p>rotation stride: <input id="rotationStride" type="text" class="small" value="0.001" /></p>
+	  <p>matching value stride (3 for grayscale pictures): <input id="matchStride" type="text" class="small" value="1" /></p>
+	  <p>matching offset: <input id="matchingOffset" type="text" class="small" value="0" /></p>
+	  <p>gamma adjust: <input id="gammaAdjust" type="text" class="small" value="2.0" /></p>
+	  <div>
+	  	<input type="submit" id="sivq" value="SIVQ" />
+	  	<input type="submit" id="stop" value="Stop" />
+	  </div>
 	</form>
 	<div id="original"></div>
 	<div id="result"></div>
