--- a/static/style.css
+++ b/static/style.css
@@ -39,11 +39,12 @@ p {
 	padding: 0;
 	position: relative;
 }
-#original img, #result img {
-	position: absolute;
-	top: 0;
-	left: 0;
+#result>.loader {
+	width: 0%;
+	height: 40px;
+	background-color: green;
 }
+
 input.small {
 	width: 50px;
 }
