--- a/template/upload.html
+++ b/template/upload.html
@@ -1,49 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Upload image</title>
-	<link rel="stylesheet" type="text/css" href="/static/style.css" />
-	<script type="text/javascript" src="/static/jquery.js"></script>
-	<script type="text/javascript" src="/static/main.js"></script>
-	<script type="text/javascript" src="/static/process.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Upload image</title>
+    <link rel="stylesheet" type="text/css" href="/static/style.css" />
+    <script type="text/javascript" src="/static/jquery.js"></script>
+    <script type="text/javascript" src="/static/main.js"></script>
+    <script type="text/javascript" src="/static/process.js"></script>
 </head>
 <body>
-	<h1>Spatially Invariant Vector Quantization</h1>
-	<form action="/upload/" method="post" enctype="multipart/form-data" id="uploadForm" target="uploadResponse">
-		Upload image:
-		<input type="file" name="image" />
-		<input type="submit" value="Upload" />
-	</form>
-	<iframe name="uploadResponse" id="uploadResponse" src="javascript:;" style="display:none;"></iframe>
-	<form id="optionsForm" action="" method="post">
-		<div>
-			<p>Image: <input id="imageName" type="text" disabled="disabled" /></p>
-			<p>vector x: <input id="vectorX" type="text" class="small" /></p>
-			<p>vector y: <input id="vectorY" type="text" class="small" /></p>
-			<p>vector radius: <input id="vectorRadius" type="text" class="small" value="10" /></p>
-			<p>vector rings: <input id="vectorRings" type="text" class="small" value="1" /></p>
-			<p>ring size increment: <input id="ringSizeInc" type="text" class="small" value="2" /></p>
-			<p>threshold: <input id="threshold" type="text" class="small" value="0.0" /></p>
-			<p>rotation stride: <input id="rotationStride" type="text" class="small" value="0.001" /></p>
-			<p>matching value stride (3 for grayscale pictures): <input id="matchStride" type="text" class="small" value="1" /></p>
-			<p>matching offset: <input id="matchingOffset" type="text" class="small" value="0" /></p>
-			<p>gamma adjust: <input id="gammaAdjust" type="text" class="small" value="2.0" /></p>
-			<div>
-				<input type="submit" id="sivq" value="SIVQ" />
-				<button type="button" id="stop">Stop</button>
-			</div>
-		</div>
-		<fieldset>
-			<legend>Vectors</legend>
-			<p>Use previously saved vector: <select id="vectorSelector">{VectorFiles}</select></p>
-			<p>Save vector as: <input type="text" id="newVectorName" /> <button type="button" id="saveNewVector">Save</button></p>
-		</fieldset>
-	</form>
-	<div id="original"></div>
-	<div id="result"></div>
-	<script>
-	main.init();
-	</script>
+    <h1>Spatially Invariant Vector Quantization</h1>
+    <form action="/upload/" method="post" enctype="multipart/form-data" id="uploadForm" target="uploadResponse">
+        Upload image:
+        <input type="file" name="image" />
+        <input type="submit" value="Upload" />
+    </form>
+    <iframe name="uploadResponse" id="uploadResponse" src="javascript:;" style="display:none;"></iframe>
+    <form id="optionsForm" action="" method="post">
+        <div>
+            <p>Image: <input id="imageName" type="text" disabled="disabled" /></p>
+            <p>vector x: <input id="vectorX" type="text" class="small" /></p>
+            <p>vector y: <input id="vectorY" type="text" class="small" /></p>
+            <p>vector radius: <input id="vectorRadius" type="text" class="small" value="10" /></p>
+            <p>vector rings: <input id="vectorRings" type="text" class="small" value="1" /></p>
+            <p>ring size increment: <input id="ringSizeInc" type="text" class="small" value="2" /></p>
+            <p>threshold: <input id="threshold" type="text" class="small" value="0.0" /></p>
+            <p>rotation stride: <input id="rotationStride" type="text" class="small" value="0.001" /></p>
+            <p>matching value stride (3 for grayscale pictures): <input id="matchStride" type="text" class="small" value="1" /></p>
+            <p>matching offset: <input id="matchingOffset" type="text" class="small" value="0" /></p>
+            <p>gamma adjust: <input id="gammaAdjust" type="text" class="small" value="2.0" /></p>
+            <div>
+                <input type="submit" id="sivq" value="SIVQ" />
+                <button type="button" id="stop">Stop</button>
+            </div>
+        </div>
+        <fieldset>
+            <legend>Vectors</legend>
+            <p>Use previously saved vector: <select id="vectorSelector">{VectorFiles}</select></p>
+            <p>Save vector as: <input type="text" id="newVectorName" /> <button type="button" id="saveNewVector">Save</button></p>
+        </fieldset>
+    </form>
+    <div id="images">
+        <div id="original" class="image"></div>
+        <div id="result" class="image"></div>
+    </div>
+    <script>
+    main.init();
+    </script>
 </body>
 </html>
