Keep field name and value on same line.

--- a/template/upload.html
+++ b/template/upload.html
@@ -18,17 +18,17 @@
     <iframe name="uploadResponse" id="uploadResponse" src="javascript:;" style="display:none;"></iframe>
     <form id="optionsForm" action="" method="post">
         <div>
-            <p>Image: <input id="imageName" type="text" disabled="disabled" /></p>
-            <p>vector x: <input id="vectorX" type="text" class="small" /></p>
-            <p>vector y: <input id="vectorY" type="text" class="small" /></p>
-            <p>vector radius: <input id="vectorRadius" type="text" class="small" value="10" /></p>
-            <p>vector rings: <input id="vectorRings" type="text" class="small" value="1" /></p>
-            <p>ring size increment: <input id="ringSizeInc" type="text" class="small" value="2" /></p>
-            <p>threshold: <input id="threshold" type="text" class="small" value="0.0" /></p>
-            <p>rotation stride: <input id="rotationStride" type="text" class="small" value="0.001" /></p>
-            <p>matching value stride (3 for grayscale pictures): <input id="matchStride" type="text" class="small" value="1" /></p>
-            <p>matching offset: <input id="matchingOffset" type="text" class="small" value="0" /></p>
-            <p>gamma adjust: <input id="gammaAdjust" type="text" class="small" value="2.0" /></p>
+            <p>Image:&nbsp;<input id="imageName" type="text" disabled="disabled" /></p>
+            <p>vector&nbsp;x:&nbsp;<input id="vectorX" type="text" class="small" /></p>
+            <p>vector&nbsp;y:&nbsp;<input id="vectorY" type="text" class="small" /></p>
+            <p>vector&nbsp;radius:&nbsp;<input id="vectorRadius" type="text" class="small" value="10" /></p>
+            <p>vector&nbsp;rings:&nbsp;<input id="vectorRings" type="text" class="small" value="1" /></p>
+            <p>ring&nbsp;size&nbsp;increment:&nbsp;<input id="ringSizeInc" type="text" class="small" value="2" /></p>
+            <p>threshold:&nbsp;<input id="threshold" type="text" class="small" value="0.0" /></p>
+            <p>rotation&nbsp;stride:&nbsp;<input id="rotationStride" type="text" class="small" value="0.001" /></p>
+            <p>matching&nbsp;value&nbsp;stride&nbsp;(3&nbsp;for&nbsp;grayscale&nbsp;pictures):&nbsp;<input id="matchStride" type="text" class="small" value="1" /></p>
+            <p>matching&nbsp;offset:&nbsp;<input id="matchingOffset" type="text" class="small" value="0" /></p>
+            <p>gamma&nbsp;adjust:&nbsp;<input id="gammaAdjust" type="text" class="small" value="2.0" /></p>
             <div>
                 <input type="submit" id="sivq" value="SIVQ" />
                 <button type="button" id="stop">Stop</button>
