display: inline-block for options

--- a/static/style.css
+++ b/static/style.css
@@ -39,7 +39,7 @@ p {
 	border: 1px solid #CCC;
 }
 #optionsForm>div>p {
-	display: inline;
+	display: inline-block;
 	margin-right: 10px;
 }
 #original, #result {
@@ -56,7 +56,6 @@ p {
 #result {
 	float: right;
 }
-
 #result>.loader {
 	width: 0%;
 	height: 40px;
