dev: added average bias

--- a/template/upload.html
+++ b/template/upload.html
@@ -22,14 +22,14 @@
             <p>vector&nbsp;y:&nbsp;<input id="vectorY" type="text" class="small" /></p>
             <p>vector&nbsp;radius:&nbsp;<input id="vectorRadius" type="text" class="small" value="10" /></p>
             <p>vector&nbsp;rings:&nbsp;<input id="vectorRings" type="text" class="small" value="1" /></p>
-            <p>ring&nbsp;size&nbsp;increment:&nbsp;<input id="ringSizeInc" type="text" class="small" value="2" /></p>
+            <p>radius&nbsp;increment:&nbsp;<input id="ringSizeInc" type="text" class="small" value="2" /></p>
             <p>threshold:&nbsp;<input id="threshold" type="text" class="small" value="0.0" /></p>
-            <p>rotation&nbsp;stride:&nbsp;<input id="rotationStride" type="text" class="small" value="0.001" /></p>
-            <p>matching&nbsp;value&nbsp;stride&nbsp;(3&nbsp;for&nbsp;grayscale&nbsp;pictures):&nbsp;<input id="matchStride" type="text" class="small" value="1" /></p>
-            <p>matching&nbsp;offset:&nbsp;<input id="matchingOffset" type="text" class="small" value="0" /></p>
+            <p>gamma adjust: <input id="gammaAdjust" type="text" class="small" value="2.0" /></p>
             <div>Advanced <input type="checkbox" id="advanced" /></div>
             <div id="advancedOptions">
-            	<p>gamma adjust: <input id="gammaAdjust" type="text" class="small" value="2.0" /></p>
+                <p>rotation&nbsp;stride:&nbsp;<input id="rotationStride" type="text" class="small" value="0.001" /></p>
+                <p>matching&nbsp;value&nbsp;stride&nbsp;(3&nbsp;for&nbsp;grayscale):&nbsp;<input id="matchStride" type="text" class="small" value="1" /></p>
+                <p>matching&nbsp;offset:&nbsp;<input id="matchingOffset" type="text" class="small" value="0" /></p>
             </div>
             <div>
                 <input type="submit" id="sivq" value="SIVQ" />
