--- a/template/upload.html
+++ b/template/upload.html
@@ -61,6 +61,7 @@
     <div id="images">
         <div id="original" class="image"></div>
         <div id="result" class="image"></div>
+        <div id="chooseBest">(<span></span>) choose best image:</div>
     </div>
     <iframe name="uploadResponse" id="uploadResponse" src="javascript:;" style="display:none;"></iframe>
     <script>
