--- a/template/upload.html
+++ b/template/upload.html
@@ -25,29 +25,12 @@
             <p>radius&nbsp;increment:&nbsp;<input id="ringSizeInc" type="text" class="small" value="2" /></p>
             <p>threshold:&nbsp;<input id="threshold" type="text" class="small" value="0.0" /></p>
             <p>gamma adjust: <input id="gammaAdjust" type="text" class="small" value="2.0" /></p>
-            <div>Advanced <input type="checkbox" id="advanced" /></div>
-            <div id="advancedOptions">
-                <p>
-                	rotation stride: <input id="rotationStride" type="text" class="small" value="0.001" />
-                	<select><option>0.001</option><option>0.01</option><option>0.1</option></select>
-                </p>
-                <p>
-                	matching value stride (can be 3 for grayscale):
-                	<input id="matchStride" type="text" class="small" value="1" />
-                	<select><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option></select>
-                </p>
-                <p>
-                	matching offset:
-                	<input id="matchingOffset" type="text" class="small" value="0" />
-                	<select><option>0</option><option>1</option><option>2</option><option>3</option></select>
-                </p>
-                <p>
-                	average bias:
-                	<input id="averageBias" type="text" class="small" value="0.0" />
-                	<select><option>0.0</option><option>0.1</option><option>0.2</option><option>0.3</option></select>
-                </p>
-            </div>
+            <p>rotation stride: <input id="rotationStride" type="text" class="small" value="0.001" /></p>
+            <p>matching value stride (can be 3 for grayscale): <input id="matchStride" type="text" class="small" value="1" /></p>
+            <p>matching offset: <input id="matchingOffset" type="text" class="small" value="0" /></p>
+            <p>average bias: <input id="averageBias" type="text" class="small" value="0.0" /></p>
             <div>
+            	<button type="button" id="adjustParameters">Adjust parameters</button>
                 <input type="submit" id="sivq" value="SIVQ" />
                 <button type="button" id="stop">Stop</button>
             </div>
